--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,6 +40,9 @@ jobs:
           node-version: lts/*
           cache: 'pnpm' # Set this to npm, yarn or pnpm.
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
