--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,13 +36,11 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: 6.32.9
+          version: 8.10.2
       - uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: 21.3.0
           cache: 'pnpm'
-      - run: pnpm install
-      - run: pnpm test
     
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
