--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: 'publish'
 on:
   push:
     branches:
-      - master
+      - release
 
 jobs:
   publish-tauri:
@@ -36,10 +36,10 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: 8.10.2
+          version: lts/*
       - uses: actions/setup-node@v4
         with:
-          node-version: 21.3.0
+          node-version: lts/*
           cache: 'pnpm'
     
       - name: install Rust stable
