--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,10 +36,10 @@ jobs:
 
       - uses: pnpm/action-setup@v2
         with:
-          version: lts/*
+          version: 8.10.2
       - uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 21.3.0
           cache: 'pnpm'
     
       - name: install Rust stable
