--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,16 +35,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
-      - name: Setup Node.js
+      - name: Install Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 21.3.0
-          cache: 'pnpm'
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+          node-version: 20
+  
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          version: 8.10.2
+          version: 8
+          run_install: false
 
       - name: Install Rust stable
         uses: actions-rs/toolchain@v1
