--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,20 +45,19 @@ jobs:
         with:
           version: 8
           run_install: false
+          
 
-      - name: Install Rust stable
-        uses: actions-rs/toolchain@v1
+      - name: install Rust stable
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
+          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
+          targets: ${{ matrix.settings.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
-      - name: Cache Rust dependencies
-        uses: actions/cache@v2
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
         with:
-          path: ~/.cargo
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-
+          workspaces: './src-tauri -> target'
+        
       - name: Install frontend dependencies
         run: pnpm install # change this to npm or pnpm depending on which one you use.
 
