--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,8 @@ tauri-build = { version = "1.5", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.6", features = ["api-all"] }
+reqwest = { version = "0.11.5", features = ["blocking", "json"] }
+tokio = { version = "1", features = ["full"] }
 
 [features]
 # by default Tauri runs in production mode
